@@ -1,6 +1,7 @@
 package org.example.controllers;
 
 import org.example.dtos.OrderDTO;
+import org.example.dtos.RequestOrderDTO;
 import org.example.model.Order;
 import org.example.services.TicketsManagementService;
 import org.springframework.http.HttpStatus;
@@ -13,11 +14,11 @@ import org.springframework.web.bind.annotation.RestController;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
+
 
 @RestController
 public class OrdersController {
-    private TicketsManagementService ticketsManagementService;
+    private final TicketsManagementService ticketsManagementService;
     private static final Integer customerID = 1;
 
     public OrdersController(TicketsManagementService ticketsManagementService) {
@@ -33,27 +34,32 @@ public class OrdersController {
     }
 
     @PostMapping("/orders")
-    public ResponseEntity<?> create(@RequestBody OrderDTO orderDTO) {
-        Optional<Order> orderOptional = ticketsManagementService.saveOrder(customerID, orderDTO.getEventID(), orderDTO.getTicketCategoryID(), orderDTO.getNumberOfTickets());
+    public ResponseEntity<?> create(@RequestBody RequestOrderDTO requestOrderDTO) {
+        Optional<Order> orderOptional = ticketsManagementService.saveOrder( customerID,
+                                                                            requestOrderDTO.getEventID(),
+                                                                            requestOrderDTO.getTicketCategoryID(),
+                                                                            requestOrderDTO.getNumberOfTickets());
+
         if (orderOptional.isEmpty()) {
             return new ResponseEntity<>(HttpStatus.NOT_FOUND);
         }
+
         Order order = orderOptional.get();
         OrderDTO orderDTOToReturn = new OrderDTO(order.getTicketCategory().getEvent().getEventID(),
-                order.getOrderedAt(), order.getTicketCategory().getTicketCategoryID(),
-                order.getNumberOfTickets(),
-                order.getTotalPrice());
-        return new ResponseEntity<OrderDTO>(orderDTOToReturn, HttpStatus.OK);
+                                                 order.getOrderedAt(), order.getTicketCategory().getTicketCategoryID(),
+                                                 order.getNumberOfTickets(),
+                                                 order.getTotalPrice());
+        return new ResponseEntity<>(orderDTOToReturn, HttpStatus.OK);
     }
 
     private List<OrderDTO> getDTOSFromOrders(List<Order> orders) {
         List<OrderDTO> orderDTOS = orders.stream()
                 .map(order -> new OrderDTO(order.getTicketCategory().getEvent().getEventID(),
-                        order.getOrderedAt(),
-                        order.getTicketCategory().getTicketCategoryID(),
-                        order.getNumberOfTickets(),
-                        order.getTotalPrice()))
-                .collect(Collectors.toList());
+                                           order.getOrderedAt(),
+                                           order.getTicketCategory().getTicketCategoryID(),
+                                           order.getNumberOfTickets(),
+                                           order.getTotalPrice()))
+                .toList();
 
         return orderDTOS;
     }
